# gfs

./: .gitignore  COPYING  README.md  pyproject.toml
src/gfs/: __init__.py  command.py
