[build-system]
requires = ["setuptools>=68.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gfs-tool"
version = "0.0.3"
description = "git format-patch series helper with changelog trail and checkpatch support"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "COPYING"}
authors = [
    {name = "Tommaso Merciai", email = "tomm.merciai@gmail.com"},
]
keywords = ["git", "format-patch", "kernel", "upstream", "patch-series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/tomm-merciai/gfs-tool"
Repository = "https://github.com/tomm-merciai/gfs-tool"

[project.scripts]
gfs = "gfs.command:main"

[tool.setuptools.packages.find]
where = ["src"]
